force-app/main/default/objects/Credit_Card_Application__c/Credit_Card_Application__c.object-meta.xml
<CustomObject>
    <label>Credit Card Application</label>
    <nameField>
        <displayFormat>ID-{0000000}</displayFormat>
        <label>Credit Card Application Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Credit Card Applications</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>