force-app/main/default/objects/Credit_Card_Application__c/fields/Account_Info__c.field-meta.xml
<CustomField>
    <fullName>Account_Info__c</fullName>
    <label>Account Info</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Checking &amp; savings</fullName>
            </value>
            <value>
                <fullName>Checking only</fullName>
            </value>
            <value>
                <fullName>Savings only</fullName>
            </value>
            <value>
                <fullName>None</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>