force-app/main/default/objects/Credit_Card_Application__c/fields/App_suite__c.field-meta.xml
<CustomField>
    <fullName>App_suite__c</fullName>
    <label>App/suite</label>
    <length>80</length>
    <type>Text</type>
</CustomField>