force-app/main/default/objects/Credit_Card_Application__c/fields/Credit_inquiry_authorization__c.field-meta.xml
<CustomField>
    <fullName>Credit_inquiry_authorization__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Credit inquiry authorization</label>
    <type>Checkbox</type>
</CustomField>