force-app/main/default/objects/Credit_Card_Application__c/fields/Education__c.field-meta.xml
<CustomField>
    <fullName>Education__c</fullName>
    <label>Education</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Less than a high school diploma</fullName>
            </value>
            <value>
                <fullName>High school diploma or GED</fullName>
            </value>
            <value>
                <fullName>Some college or associate degree</fullName>
            </value>
            <value>
                <fullName>Bachelor&apos;s degree</fullName>
            </value>
            <value>
                <fullName>Advanced/graduate degree</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>