force-app/main/default/objects/Credit_Card_Application__c/fields/Electronic_Communications__c.field-meta.xml
<CustomField>
    <fullName>Electronic_Communications__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Electronic Communications</label>
    <type>Checkbox</type>
</CustomField>