force-app/main/default/objects/Credit_Card_Application__c/fields/Legal_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_First_Name__c</fullName>
    <label>Legal First Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>