force-app/main/default/objects/Credit_Card_Application__c/fields/Legal_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Legal_Last_Name__c</fullName>
    <label>Legal Last Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>