force-app/main/default/objects/Credit_Card_Application__c/fields/MI__c.field-meta.xml
<CustomField>
    <fullName>MI__c</fullName>
    <label>MI</label>
    <length>1</length>
    <type>Text</type>
</CustomField>