force-app/main/default/objects/Credit_Card_Application__c/fields/Monthly_rent_mortgage__c.field-meta.xml
<CustomField>
    <fullName>Monthly_rent_mortgage__c</fullName>
    <label>Monthly rent/mortgage</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>