force-app/main/default/objects/Credit_Card_Application__c/fields/Physical_Card_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Physical_Card_Delivery_Date__c</fullName>
    <formula>IF(ISPICKVAL(Status__c, &quot;Approved&quot;), CreatedDate + 14, CreatedDate)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Physical Card Delivery Date</label>
    <type>Date</type>
</CustomField>