force-app/main/default/objects/Credit_Card_Application__c/fields/Primary_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Phone_Number__c</fullName>
    <label>Primary Phone Number</label>
    <type>Phone</type>
</CustomField>