force-app/main/default/objects/Credit_Card_Application__c/fields/Residential_Address__c.field-meta.xml
<CustomField>
    <fullName>Residential_Address__c</fullName>
    <label>Residential Address</label>
    <length>130768</length>
    <type>LongTextArea</type>
</CustomField>