force-app/main/default/objects/Credit_Card_Application__c/fields/Total_Annual_Income__c.field-meta.xml
<CustomField>
    <fullName>Total_Annual_Income__c</fullName>
    <label>Total Annual Income</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>