force-app/main/default/objects/Credit_Card_Application__c/listViews/Today.listView-meta.xml
<ListView>
    <fullName>Today</fullName>
    <columns>Legal_First_Name__c</columns>
    <columns>Legal_Last_Name__c</columns>
    <columns>NAME</columns>
    <columns>Card_Number__c</columns>
    <columns>Card_Holder_Name__c</columns>
    <columns>CVV__c</columns>
    <columns>Expiration_Date__c</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATED_DATE</field>
        <operation>equals</operation>
        <value>TODAY</value>
    </filters>
    <label>Today</label>
</ListView>